--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@storybook/vue": "^5.3.19",
     "core-js": "^2.6.5",
     "vue": "^2.6.10"
   },
